# nfs-manager

./: .gitignore  ARCHITECTURE.md  PROJECT_STATUS.md  QUICKREF.md  README.md  build.sh  dev.sh  package.json  run.sh
src/: App.css  App.tsx  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs  nfs.rs
