[package]
name = "nfs-manager"
version = "0.1.0"
description = "NFS Manager - 简单易用的 NFS 自动挂载/卸载工具"
authors = ["xuhui"]
edition = "2021"

[lib]
name = "nfs_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"

